@@ -1,3 +1,10 @@
+Fri Dec 22 18:55:29 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>
+
+        * tests/TransportCurrent/Framework/Client_Request_Interceptor.cpp:
+        * tests/TransportCurrent/IIOP/IIOP_Server_Request_Interceptor.cpp:
+
+          Replaced obsolete ACE_reinterpret_cast macro.
+
 Thu Dec 21 21:29:47 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>
 
         * tao/TransportCurrent/Current_ORBInitializer_Base.cpp:
